Added a annotation component to encapsulate the logic of selecting text to make annotations; added logic to listen for selecting text only on those elements that should be part of the annotation area

--- a/annotate-the-web/src/app/feature-pages/home/home.component.scss
+++ b/annotate-the-web/src/app/feature-pages/home/home.component.scss
@@ -39,6 +39,7 @@
 		.text-annotation-container {
 			align-self: center;
 			width: 60%;
+			box-shadow: 0 3px 5px var(--annot-color-medium-tint);
 		}
 	}
 }
