Added component to show list of annotations; added ability to edit/delete annotation and persist CRUD operations in local storage

--- a/annotate-the-web/src/app/components/annotator/annotator.component.scss
+++ b/annotate-the-web/src/app/components/annotator/annotator.component.scss
@@ -2,6 +2,7 @@
 	padding: 1rem;
 	position: relative;
 	background-color: #fff;
+	box-shadow: 0 3px 5px var(--annot-color-medium-tint);
 
 	h6 {
 		margin: 0 0 1rem 0;
