--- a/annotate-the-web/src/app/feature-pages/home/home.component.html
+++ b/annotate-the-web/src/app/feature-pages/home/home.component.html
@@ -1,10 +1,13 @@
-<div class="homepage-container">
-	<h1>Annotate The Web</h1>
-	<h3>Make sense of the web with our simple annotation tool.</h3>
-	<h5>Annotations allow you to add notes and commments to text.</h5>
-	<h5>You or other people can come back to this text and read these notes and comments at a later date.</h5>
-	<h6>Try it. Highlight some text below to see how easy and helpful annotations can be.</h6>
-	<div class="text-annotation-container">
-		<app-annotator></app-annotator>
+<div class="page-text-container">
+	<div class="text-content-container">
+		<h1>Annotate The Web</h1>
+		<h3>Make sense of the web with our simple annotation tool.</h3>
+		<h5>Annotations allow you to add notes and commments to text.</h5>
+		<h5>You or other people can come back to this text and read these notes and comments at a later date.</h5>
+		<h6>Try it. Highlight some text below to see how easy and helpful annotations can be.</h6>
+		<div class="text-annotation-container">
+			<app-annotator></app-annotator>
+			<app-annotation-list></app-annotation-list>
+		</div>
 	</div>
 </div>
