Added a banner component to the landing page where a user can register/login or logout if they are already logged in. Added the authenticate service and wired up the ability to register/login.

--- a/annotate-the-web/src/app/components/inline-annotate/inline-annotate.component.html
+++ b/annotate-the-web/src/app/components/inline-annotate/inline-annotate.component.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="inline-annotate-add-note-container" *ngIf="showAddNote">
 			<form [formGroup]="addAnnotationForm" (ngSubmit)="addAnnotationNote()">
-				<label for="note">Add Annotation Note</label>
+				<label for="note">Add Annotation</label>
 				<textarea formControlName="note"></textarea>
 				<button type="submit" [disabled]="!addAnnotationForm.valid">ADD</button>
 			</form>
