--- a/annotate-the-web/src/app/feature-pages/reset-password/reset-password.component.html
+++ b/annotate-the-web/src/app/feature-pages/reset-password/reset-password.component.html
@@ -4,10 +4,11 @@
 		<h3>Reset Password</h3>
 		<h6>Change your password below</h6>
 		<div class="edit-annotation-form-container">
-			<form class="generic" [formGroup]="resetForm" (keyup.enter)="reset()">
+			<form class="generic reset-form" [formGroup]="resetForm" (keyup.enter)="reset()">
 				<div>
-					<label for="annotation">Email</label>
+					<label for="annotation" autofocus>Email</label>
 					<input formControlName="email">
+					<p class="invalid-form-control-message" *ngIf="resetForm.touched && !resetForm.valid">Invalid email</p>
 				</div>
 				<div>
 					<label for="annotation">Old Password</label>
@@ -16,6 +17,7 @@
 				<div>
 					<label for="annotation">New Password</label>
 					<input type="password" formControlName="newPassword">
+					<p class="invalid-form-control-message">You must add a different password.</p>
 				</div>
 				<div class="form-buttons-container">
 					<button type="submit" (click)="reset()">Reset</button>
