Added reset password logic

--- a/annotate-the-web/src/app/feature-pages/reset-password/reset-password.component.html
+++ b/annotate-the-web/src/app/feature-pages/reset-password/reset-password.component.html
@@ -8,7 +8,7 @@
 				<div>
 					<label for="annotation" autofocus>Email</label>
 					<input formControlName="email">
-					<p class="invalid-form-control-message" *ngIf="resetForm.touched && !resetForm.valid">Invalid email</p>
+					<p class="invalid-form-control-message" *ngIf="resetForm.touched && !resetForm.controls['email'].valid">Invalid email</p>
 				</div>
 				<div>
 					<label for="annotation">Old Password</label>
@@ -17,10 +17,13 @@
 				<div>
 					<label for="annotation">New Password</label>
 					<input type="password" formControlName="newPassword">
-					<p class="invalid-form-control-message">You must add a different password.</p>
+					<p *ngIf="showPasswordEqualError" class="invalid-form-control-message">You must add a different password.</p>
 				</div>
 				<div class="form-buttons-container">
-					<button type="submit" (click)="reset()">Reset</button>
+					<button type="submit" (click)="reset()" [disabled]="!resetForm.valid || !resetForm.touched">Reset</button>
+				</div>
+				<div class="form-error-messages">
+					<p class="invalid-form-control-message" *ngIf="showResetFailError">Error resetting password.</p>
 				</div>
 			</form>
 		</div>
