--- a/annotate-the-web/src/app/feature-pages/home/home.component.html
+++ b/annotate-the-web/src/app/feature-pages/home/home.component.html
@@ -3,7 +3,7 @@
 		<h1>Annotate The Web</h1>
 		<h3>Make sense of the web with our simple annotation tool.</h3>
 		<h5>Annotations allow you to add notes and commments to text.</h5>
-		<h5>You or other people can come back to this text and read these notes and comments at a later date.</h5>
+		<h5>If logged in, you can come back to this text and read these notes and comments at a later date.</h5>
 		<app-authenticate-banner></app-authenticate-banner>
 		<h6>Try it. Highlight some text below to see how easy and helpful annotations can be.</h6>
 		<div class="text-annotation-container">
