--- a/annotate-the-web/src/app/feature-pages/login/login.component.html
+++ b/annotate-the-web/src/app/feature-pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="edit-annotation-container">
+<div class="login-page-container">
 		<div class="text-content-container">
 			<h1>Annotate The Web</h1>
 			<h3>Login</h3>
